Fixed spacing issues on home and steps page!!

--- a/Code/catbit/public/stylesheets/catbitStyle.css
+++ b/Code/catbit/public/stylesheets/catbitStyle.css
@@ -84,7 +84,7 @@ a.nav:hover, a.nav:active {
   z-index: 1000;
 }
 
-.navSpacer , #navSpaceHolder {
+.navSpacer {
   position: static;
   width: 100%;
   height: 12.5%;
